{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 5,
  "lineage": "23b10e19-7112-82cd-0eb4-9be27900d7bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:648084196633:security-group/sg-0ca056da64454f9d3",
            "description": "Security group for EKS cluster k8s-igl5",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca056da64454f9d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              }
            ],
            "name": "eks-cluster-sg-k8s-igl5",
            "name_prefix": "",
            "owner_id": "648084196633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-sg-k8s-igl5"
            },
            "tags_all": {
              "Name": "eks-cluster-sg-k8s-igl5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d26558b74a900591"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:648084196633:security-group/sg-083082fdfff616c3e",
            "description": "Security group for EKS worker nodes k8s-igl5",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083082fdfff616c3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              }
            ],
            "name": "eks-worker-sg-k8s-igl5",
            "name_prefix": "",
            "owner_id": "648084196633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-worker-sg-k8s-igl5"
            },
            "tags_all": {
              "Name": "eks-worker-sg-k8s-igl5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d26558b74a900591"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:648084196633:vpc/vpc-0752f4c672542bf9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-08218edea51157c1b",
            "default_route_table_id": "rtb-016c7698541a46de2",
            "default_security_group_id": "sg-0a53aedcdad9cfd87",
            "dhcp_options_id": "dopt-03c366b5cbcf5977d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0752f4c672542bf9f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016c7698541a46de2",
            "owner_id": "648084196633"
          }
        }
      ]
    }
  ]
}